@@ -8,14 +8,14 @@ _run ()
     _MOTD="${_ROOTFS}/etc/motd"
     { echo -e "\e[1mWelcome to \e[36mArchboot\e[m\e[1m - Arch Linux ${_RUNNING_ARCH^^}\e[m"
     echo -e "\e[1m----------------------------------------\e[m"
-    echo -e "\e[1mVconsole Layout:\e[m"
+    echo -e "\e[1mVconsole Layout: \e[1;92mPress CTRL+ALT+<F-KEY>\e[m"
     echo -e "-----------------------------------------------------"
     echo -e "| Login     | Network | System | Log      | Systemd |"
     echo -e "| Consoles  | Status  | Status | Messages | Journal |"
     echo -e "|-----------|---------|--------|----------|---------|"
-    echo -e "| VC 1 - 4  | VC 5    | VC 6   | VC 11    | VC 12   |"
+    echo -e "| VC 1 - 3  |  VC 4   |  VC 5  |  VC 11   |  VC 12  |"
     echo -e "|-----------|---------|--------|----------|---------|"
-    echo -e "| \e[1;92mALT+F1-F4\e[m | \e[1;92mALT+F5\e[m  | \e[1;92mALT+F6\e[m | \e[1;92mALT+F11\e[m  | \e[1;92mALT+F12\e[m |"
+    echo -e "| \e[1;92m  F1-F3\e[m   |   \e[1;92mF4\e[m    |   \e[1;92mF5\e[m   |   \e[1;92mF11\e[m    |   \e[1;92mF12\e[m   |"
     echo -e "-----------------------------------------------------"
 if rg -qw net <<< "${_HOOKS[@]}"; then
     echo -e "\e[1mFor Additional Wi-Fi Authentification Or Online Help:\e[m"
