@@ -1,6 +1,7 @@
 On the road to 2026.01:
 - updated grub to 2.14
 Environment:
+- switched to KMSCON
 - added pigz to packages
 - added /usr/lib/gnupg programs
 - removed custom modprobe.conf
